# axum-dieasel-api

./: Cargo.toml  docker-compose.yml
migrations/2023-11-27-235114_create_posts/: up.sql
src/: main.rs
