[package]
name = "axum-dieasel-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["macros"]}
axum-macros = "0.4.0"
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["postgres", "uuid", "serde_json"]}
diesel_migrations = "2.1.0"
deadpool-diesel = {version = "0.5.0", features = ["postgres"]}
dotenvy = "0.15.7"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["sync", "macros", "rt-multi-thread"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
uuid = {version = "1.6.1", features = ["fast-rng", "v4", "serde"]}